add button styles

--- a/wizards/WizardsWeb/Views/Hero/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Create.cshtml
@@ -43,7 +43,7 @@
                     </div>
                     <hr />
                     <div class="form-group">
-                        <input type="submit" value="Create Hero" class="btn btn-outline-primary btn-block" />
+                        <input type="submit" value="Create Hero" class="gbtn gbtn-accept btn-block" />
                     </div>
                 </form>
             </li>
@@ -55,8 +55,8 @@
                         <input asp-for="AvatarImageNumber" hidden="true" />
                         <input asp-for="Profession" hidden="true" />
                         <div class="btn-group btn-block">
-                            <input type="submit" value="Back" class="btn btn-outline-warning" />
-                            <a class="btn btn-outline-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
+                            <input type="submit" value="Back" class="gbtn gbtn-action" />
+                            <a class="gbtn gbtn-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
                         </div>
                     </div>
                 </form>
