--- a/wizards/WizardsWeb/Views/Hero/EditNickName.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/EditNickName.cshtml
@@ -30,8 +30,8 @@
                         <input asp-for="NickName" class="form-control" />
                     </div>
                     <div class="btn-group btn-block">
-                        <a type="button" class="btn btn-outline-warning" asp-action="Details">Back to Details</a>
-                        <input type="submit" value="Save" class="btn btn-outline-primary" />
+                        <a type="button" class="gbtn gbtn-action" asp-action="Details">Back to Details</a>
+                        <input type="submit" value="Save" class="gbtn gbtn-accept" />
                     </div>
                 </form>
             </li>
