--- a/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
@@ -95,8 +95,8 @@
                         <hr />
                         <div class="form-group">
                             <div class="btn-group btn-block">
-                                <input type="submit" asp-action="SetProfession" value="Set profession" class="btn btn-outline-primary" />
-                                <a class="btn btn-outline-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
+                                <input type="submit" asp-action="SetProfession" value="Set profession" class="gbtn gbtn-action" />
+                                <a class="gbtn gbtn-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
                             </div>
                         </div>
                     </form>
