--- a/wizards/WizardsWeb/Views/Hero/_HeroBasicPresentation.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroBasicPresentation.cshtml
@@ -29,10 +29,10 @@
                 <li class="list-group-item bg-paper-color justify-content-center">
                     <div class="col-md-12">
                         <div class="btn-group btn-block">
-                            <a class="btn btn-outline-primary" asp-action="EditNickName">
+                            <a class="gbtn gbtn-action" asp-action="EditNickName">
                                 Edit Name
                             </a>
-                            <a class="btn btn-outline-primary" asp-action="EditAvatar">
+                            <a class="gbtn gbtn-action" asp-action="EditAvatar">
                                 Edit Avatar
                             </a>
                         </div>
