--- a/wizards/WizardsWeb/Views/Inventory/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/Index.cshtml
@@ -16,8 +16,8 @@
             </li>
             <li class="list-group-item justify-content-between bg-paper-color">
                 <div class="btn-group btn-block">
-                    <a class="btn btn-outline-warning" asp-controller="Hero" asp-action="Details">Back to Hero</a>
-                    <a class="btn btn-outline-warning" asp-controller="Merchant" asp-action="Index">Go to Merchant</a>
+                    <a class="gbtn gbtn-action" asp-controller="Hero" asp-action="Details">Back to Hero</a>
+                    <a class="gbtn gbtn-action" asp-controller="Merchant" asp-action="Index">Go to Merchant</a>
                 </div>
             </li>
         </ul>
