--- a/wizards/WizardsWeb/Views/Item/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Item/Create.cshtml
@@ -107,8 +107,8 @@
                     <div class="row">
                         <div class="col-8">
                             <div class="btn-group btn-block">
-                                <input class="btn btn-outline-primary" type="submit" value="Create" />
-                                <a class="btn btn-outline-warning" asp-controller="Merchant" asp-action="Index">Back to Merchant</a>
+                                <input class="gbtn gbtn-accept" type="submit" value="Create" />
+                                <a class="gbtn gbtn-action" asp-controller="Merchant" asp-action="Index">Back to Merchant</a>
                             </div>
                         </div>
                     </div>
