--- a/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
@@ -34,7 +34,7 @@
             <th>
                 @if (Model.CanShowRepairEquipmentButton())
                 {
-                    <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal" data-bs-target="#repair-equipped">
+                    <button type="button" class="gbtn gbtn-magical gbtn-sm" data-bs-toggle="modal" data-bs-target="#repair-equipped">
                         Repair all equipped
                     </button>
                 }
@@ -69,27 +69,27 @@
                 <td>
                     <div class="btn-group">
                         <!-- Button trigger modal for Details -->
-                    <a class="btn btn-primary btn-sm" data-bs-toggle="modal" href="#details-@item.Id">Details</a>
+                    <a class="gbtn gbtn-action gbtn-sm" data-bs-toggle="modal" href="#details-@item.Id">Details</a>
 
                         @if (item.IsEquipped && !item.IsInMerchantMode && !item.IsMerchantItem)
                         {
-                            <a class="btn btn-warning btn-sm" asp-controller="Selector" asp-action="SelectItem" asp-route-id="@item.Id" asp-route-actionName="Unequip">Unequip</a>
+                            <a class="gbtn gbtn-accept gbtn-sm" asp-controller="Selector" asp-action="SelectItem" asp-route-id="@item.Id" asp-route-actionName="Unequip">Unequip</a>
                         }
                         else if (!item.IsEquipped && !item.IsInMerchantMode && !item.IsMerchantItem)
                         {
-                            <a class="btn btn-success btn-sm" asp-controller="Selector" asp-action="SelectItem" asp-route-id="@item.Id" asp-route-actionName="Equip">Equip</a>
+                            <a class="gbtn gbtn-action gbtn-sm" asp-controller="Selector" asp-action="SelectItem" asp-route-id="@item.Id" asp-route-actionName="Equip">Equip</a>
                         }
                         else if (item.IsInMerchantMode && !item.IsMerchantItem)
                         {
-                            <a class="btn btn-danger btn-sm" data-bs-toggle="modal" href="#sell-item-@item.Id">Sell</a>
+                            <a class="gbtn gbtn-danger gbtn-sm" data-bs-toggle="modal" href="#sell-item-@item.Id">Sell</a>
                         }
                         else if (item.IsMerchantItem)
                         {
-                            <a class="btn btn-success btn-sm" data-bs-toggle="modal" href="#buy-item-@item.CoreItemId">Buy</a>
+                            <a class="gbtn gbtn-accept gbtn-sm" data-bs-toggle="modal" href="#buy-item-@item.CoreItemId">Buy</a>
 
                             @if (User.IsInRole($"{UserRoles.Admin.ToString()}") || User.IsInRole($"{UserRoles.Moderator.ToString()}"))
                             {
-                                <a class="btn btn-secondary btn-sm" asp-controller="Item" asp-action="Edit" asp-route-id="@item.CoreItemId">
+                                <a class="gbtn gbtn-technical gbtn-sm" asp-controller="Item" asp-action="Edit" asp-route-id="@item.CoreItemId">
                                     Edit
                                 </a>
                             }
