--- a/wizards/WizardsWeb/Views/Player/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Create.cshtml
@@ -57,7 +57,7 @@
 
                                 <div class="text-center pt-1 mb-5 pb-1">
 
-                                    <input type="submit" value="Create" class="btn btn-outline-warning btn-block"/>
+                                    <input type="submit" value="Create" class="gbtn gbtn-action btn-block"/>
 
                                 </div>
 
@@ -65,11 +65,11 @@
                                     <p class="mb-0 me-2">You already have an account?</p>
 
                                     <div>
-                                        <a class="btn btn-outline-primary mx-2" id="login" asp-controller="Player" asp-action="Login">Login</a>
+                                        <a class="gbtn gbtn-accept mx-2" id="login" asp-controller="Player" asp-action="Login">Login</a>
                                     </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-outline-info btn-block mx-2" asp-controller="Home" asp-action="Index">Back to Home Page</a>
+                                    <a class="gbtn gbtn-danger btn-block mx-2" asp-controller="Home" asp-action="Index">Back to Home Page</a>
                                 </div>
                             </form>
                         </div>
