--- a/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
@@ -24,7 +24,7 @@
                         <label>@Model.UserName</label>
                     </small>
                     <hr />
-                    <a class="btn btn-outline-danger btn-block" asp-action="Edit">Edit Player's Profile</a>
+                    <a class="gbtn gbtn-danger btn-block" asp-action="Edit">Edit Player's Profile</a>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between bg-paper-color">
