--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -11,7 +11,7 @@
                             Player's Heroes
                         </h5>
                         <hr />
-                        <a type="button" class="btn btn-outline-success" asp-controller="Hero" asp-action="StartCreation">Create New Hero</a>
+                        <a type="button" class="gbtn gbtn-action" asp-controller="Hero" asp-action="StartCreation">Create New Hero</a>
                     </div>
                 </div>
             </li>
