--- a/wizards/WizardsWeb/Views/Hero/EditAvatar.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/EditAvatar.cshtml
@@ -63,8 +63,8 @@
                     </div>
                     <hr />
                     <div class="btn-group btn-block">
-                        <a type="button" class="btn btn-outline-warning" asp-action="Details">Back to Details</a>
-                        <input type="submit" value="Set Avatar" class="btn btn-outline-primary" />
+                        <a type="button" class="gbtn gbtn-action" asp-action="Details">Back to Details</a>
+                        <input type="submit" value="Set Avatar" class="gbtn gbtn-accept" />
                     </div>
                 </form>
             </li>
