--- a/wizards/WizardsWeb/Views/Hero/SetAvatar.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetAvatar.cshtml
@@ -70,7 +70,7 @@
                         </div>
                         <hr />
                         <div class="form-group">
-                            <input type="submit" value="Set Avatar" class="btn btn-outline-primary" />
+                            <input type="submit" value="Set Avatar" class="gbtn gbtn-accept" />
                         </div>
                     </form>
                 </div>
@@ -83,8 +83,8 @@
                         <input asp-for="AvatarImageNumber" hidden="true" />
 
                         <div class="btn-group btn-block">
-                            <input type="submit" asp-controller="Hero" asp-action="SetProfessionView" value="Back" class="btn btn-outline-warning" />
-                            <a class="btn btn-outline-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
+                            <input type="submit" asp-controller="Hero" asp-action="SetProfessionView" value="Back" class="gbtn gbtn-action" />
+                            <a class="gbtn gbtn-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
                         </div>
 
                     </form>
