--- a/wizards/WizardsWeb/Views/Item/_ItemEconomyInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemEconomyInfo.cshtml
@@ -16,7 +16,7 @@
             <label class="m-0 p-0 font-weight-bold">@($"{Model.RepairCost:##,##0} Gold")</label>
         </div>
         <div class="col-12 p-1">
-            <button class="btn btn-info btn-sm btn-block" data-bs-target="#repair-item-@Model.Id" data-bs-toggle="modal">Repair Item</button>
+            <button class="gbtn gbtn-magical gbtn-sm" data-bs-target="#repair-item-@Model.Id" data-bs-toggle="modal">Repair Item</button>
         </div>
     }
     <div class="col-12">
