--- a/wizards/WizardsWeb/Views/Merchant/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Merchant/Index.cshtml
@@ -17,8 +17,8 @@
 
             <li class="list-group-item d-flex justify-content-between bg-paper-color">
                 <div class="btn-group btn-block">
-                    <a class="btn btn-outline-warning" asp-controller="Hero" asp-action="Details">Back to Hero</a>
-                    <a class="btn btn-outline-warning" asp-controller="Inventory" asp-action="Index">Back to Inventory</a>
+                    <a class="gbtn gbtn-action" asp-controller="Hero" asp-action="Details">Back to Hero</a>
+                    <a class="gbtn gbtn-action" asp-controller="Inventory" asp-action="Index">Back to Inventory</a>
                 </div>
             </li>
         </ul>
