--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -15,20 +15,107 @@
     .bg-brown {
         background-color: #482001;
     }
+
     .bg-leather {
         background-color: #341d0b;
     }
+
     .bg-paper-color {
-         background-color:#ffefd8;
-     }
-    .bg-paper-header {
-        background-color:#ffe0a3;
+        background-color: #ffefd8;
     }
+
+    .bg-paper-header {
+        background-color: #ffe0a3;
+    }
+
     .text-golden-dark {
         color: #a47c01;
     }
+
     .btn-outline-warning {
         color: #cd9500;
+    }
+
+
+    .gbtn {
+        display: inline-block;
+        user-select: none;
+        margin: 0px;
+        padding: 8px 20px;
+        background-image: url(/Images/Buttons/game-btn-action.png);
+        background-size: 100% 100%;
+        background-repeat: space;
+        background-attachment: inherit;
+        border-radius: 2px;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        font-size: 100%;
+        filter: brightness(100%);
+    }
+
+        /* extension of general game button class for behaviors */
+        .gbtn:hover {
+            cursor: pointer;
+            color: white;
+            filter: brightness(130%);
+        }
+
+        .gbtn:active {
+            cursor: pointer;
+            color: white;
+            filter: brightness(60%);
+        }
+
+    /* special disabled class */
+    .gbtn-disabled {
+        color: white;
+        pointer-events: none;
+        filter: grayscale(1) brightness(110%) contrast(40%);
+    }
+
+    /* sizing classes sm => small  lg => large*/
+    .gbtn-sm {
+        margin: 0px;
+        padding: 5px 12px;
+        font-size: 90%;
+    }
+
+    .gbtn-lg {
+        margin: 0px;
+        padding: 12px 28px;
+        font-size: 120%;
+    }
+
+    /* formating background classes for different occasions */
+    .gbtn-action {
+        background-image: url(/Images/Buttons/game-btn-action.png);
+        color: white;
+    }
+
+    .gbtn-accept {
+        background-image: url(/Images/Buttons/game-btn-accept.png);
+        color: white;
+    }
+
+    .gbtn-danger {
+        background-image: url(/Images/Buttons/game-btn-danger.png);
+        color: white;
+    }
+
+    .gbtn-magical {
+        background-image: url(/Images/Buttons/game-btn-premium.png);
+        color: white;
+    }
+
+    .gbtn-premium {
+        background-image: url(/Images/Buttons/game-btn-magical.png);
+        color: white;
+    }
+
+    .gbtn-technical {
+        background-image: url(/Images/Buttons/game-btn-technical.png);
+        color: white;
     }
 </style>
 
