Change sources of css and img assets;

--- a/wizards/WizardsWeb/Views/Player/Login.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Login.cshtml
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-                        <img src="~/Images/Tapeta-1B.jpg" alt="Site Logo" style="height:100%; width: 100%;" />
+                        <img src="~/Images/Tapeta-1.jpg" alt="Site Logo" style="height:100%; width: 100%;" />
                     </div>
                 </div>
             </div>
