Set Mapping profile for elements; AdjustNamespaces

--- a/wizards/WizardsWeb/Views/BattleStage/BattleStage.cshtml
+++ b/wizards/WizardsWeb/Views/BattleStage/BattleStage.cshtml
@@ -1,4 +1,4 @@
-﻿@model WizardsWeb.ModelViews.ExplorationModelViews.BattleStageModelView
+﻿@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
 
 <body class="bg-arena not-selectable" 
       style="background-image: url(ArenaBackground/Arena-2.jpg);">
