--- a/wizards/WizardsWeb/Views/Combat/_HeroSection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_HeroSection.cshtml
@@ -1,2 +1,21 @@
 ﻿@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
 
+<div class="col-12 text-center bg-paper py-2 h4">@Model.HeroSection.NickName</div>
+<div class="col-12 participant-container">
+    @{
+        var imgAddress = $"Wizards/Wizard-{Model.HeroSection.AvatarImageNumber}.png";
+        <img class="not-dragable-image" src="@imgAddress" width="100%" height="100%">
+    }
+    
+    @if (Model.HeroSection.IsHeroStunned)
+    {
+        <div class="round-results-info-text stunned-participant-text">STUNNED</div>
+    }
+
+    <div class="round-results-info-text on-hero-damage-text">@Model.LastRoundResult.HeroDamageTaken</div>
+    
+    @if (Model.LastRoundResult.HeroHealthRecovered > 0)
+    {
+        <div class="round-results-info-text hero-heal-text">Model.LastRoundResult.HeroHealthRecovered</div>
+    }
+</div>
