--- a/wizards/WizardsWeb/Views/Combat/_CombatLayout.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_CombatLayout.cshtml
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Stage</title>
 
-    <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="ResultsTextStyles.css">
-    <link rel="stylesheet" href="HealthBarsStyles.css">
-    <link rel="stylesheet" href="EnemyActionIcons.css">
-    <link rel="stylesheet" href="SkillBar.css">
-    <link rel="stylesheet" href="LogTable.css">
-    <link rel="stylesheet" href="PopUps.css">
+    <link rel="stylesheet" href="~/css/CombatStyle.css">
+    <link rel="stylesheet" href="~/css/ResultsTextStyles.css">
+    <link rel="stylesheet" href="~/css/HealthBarsStyles.css">
+    <link rel="stylesheet" href="~/css/EnemyActionIcons.css">
+    <link rel="stylesheet" href="~/css/SkillBar.css">
+    <link rel="stylesheet" href="~/css/LogTable.css">
+    <link rel="stylesheet" href="~/css/PopUps.css">
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css"/>
