--- a/wizards/WizardsWeb/Views/Combat/_HeroHPBar.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_HeroHPBar.cshtml
@@ -1,2 +1,13 @@
-﻿@model WizardsWeb.ModelViews.CombatModelViews.HeroSectionModelView
+﻿@using WizardsWeb.Extensions
+@model WizardsWeb.ModelViews.CombatModelViews.HeroSectionModelView
 
+<div class="col-8 py-3 px-0">
+    <div class="hp-bar hp-bar-hero">
+        <div class="hp-bar-content">
+            <img class="hp-bar-health" src="BattleGui/hp-bar-health.png">
+            <div class="hp-bar-empty-bg"  style="width: @Model.HealthLostPercent();"></div>
+            <div class="hp-bar-label">@Model.CurrentHeroHealth / @Model.MaxHeroHealth</div>
+        </div>
+        <img class="hp-bar-freme" src="BattleGui/hp-bar-freme-hero.png">
+    </div>
+</div>
