--- a/wizards/WizardsWeb/Views/Combat/_HeroSkillBar.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_HeroSkillBar.cshtml
@@ -1,2 +1,80 @@
-﻿@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
+﻿@using Wizards.Core.Model.UserModels.Enums
+@using WizardsWeb.Extensions
+@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
 
+<form asp-action="CommitRound">
+    <div class="skill-bar">
+
+        <label class="skill-slot slot-1">
+            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.First))
+            {
+                var firstSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.First);
+
+                <input type="radio" value="@firstSkill.Id" asp-for="HeroSelectedSkillId">
+                <img src="Wizards/Sorcerer/Skills/@(firstSkill.Name).png" width="100%" height="100%">
+                <partial name="_SkillPopUp" model="firstSkill"/>
+            }
+        </label>
+        
+        <label class="skill-slot slot-2">
+            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Second))
+            {
+                var secondSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Second);
+
+                <input type="radio" value="@secondSkill.Id" asp-for="HeroSelectedSkillId">
+                <img src="Wizards/Sorcerer/Skills/@(secondSkill.Name).png" width="100%" height="100%">
+                <partial name="_SkillPopUp" model="secondSkill"/>
+            }
+        </label>
+        
+        <label class="skill-slot slot-3">
+            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Third))
+            {
+                var thirdSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Third);
+
+                <input type="radio" value="@thirdSkill.Id" asp-for="HeroSelectedSkillId">
+                <img src="Wizards/Sorcerer/Skills/@(thirdSkill.Name).png" width="100%" height="100%">
+                <partial name="_SkillPopUp" model="thirdSkill"/>
+            }
+        </label>
+        
+        <label class="skill-slot slot-4">
+            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Fourth))
+            {
+                var fourthSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Fourth);
+
+                <input type="radio" value="@fourthSkill.Id" asp-for="HeroSelectedSkillId">
+                <img src="Wizards/Sorcerer/Skills/@(fourthSkill.Name).png" width="100%" height="100%">
+                <partial name="_SkillPopUp" model="fourthSkill"/>
+            }
+        </label>
+        
+        <label class="skill-slot slot-5">
+            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Fifth))
+            {
+                var fifthSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Fifth);
+
+                <input type="radio" value="@fifthSkill.Id" asp-for="HeroSelectedSkillId">
+                <img src="Wizards/Sorcerer/Skills/@(fifthSkill.Name).png" width="100%" height="100%">
+                <partial name="_SkillPopUp" model="fifthSkill"/>
+            }
+        </label>
+        
+        <label class="skill-slot slot-6">
+            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Sixth))
+            {
+                var sixthSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Sixth);
+
+                <input type="radio" value="@sixthSkill.Id" asp-for="HeroSelectedSkillId">
+                <img src="Wizards/Sorcerer/Skills/@(sixthSkill.Name).png" width="100%" height="100%">
+                <partial name="_SkillPopUp" model="sixthSkill"/>
+            }
+        </label>
+
+    </div>
+
+    <div class="commit-button-container">
+        <input type="submit" value="CommitRound"/>
+    </div>
+
+</form>
