Change Layout for Combat controller; Add some Dummy data for testing Index method;

--- a/wizards/WizardsWeb/Views/_ViewStart.cshtml
+++ b/wizards/WizardsWeb/Views/_ViewStart.cshtml
@@ -1,3 +1,13 @@
-﻿@{
-    Layout = "_Layout";
+﻿@using System.Net
+@{
+    string controller = ViewContext.RouteData.Values["Controller"]?.ToString();
+
+    if (controller == "Combat")
+    {
+        Layout = "~/Views/Combat/_CombatLayout.cshtml";
+    }
+    else
+    {
+        Layout = "_Layout";
+    }
 }
