--- a/wizards/WizardsWeb/Views/Combat/_CombatLayout.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_CombatLayout.cshtml
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Stage</title>
 
-    <link rel="stylesheet" href="~/css/CombatStyle.css">
-    <link rel="stylesheet" href="~/css/ResultsTextStyles.css">
-    <link rel="stylesheet" href="~/css/HealthBarsStyles.css">
-    <link rel="stylesheet" href="~/css/EnemyActionIcons.css">
-    <link rel="stylesheet" href="~/css/SkillBar.css">
-    <link rel="stylesheet" href="~/css/LogTable.css">
-    <link rel="stylesheet" href="~/css/PopUps.css">
+    <link rel="stylesheet" href="~/css/BattleGuiStyles/CombatStyle.css">
+    <link rel="stylesheet" href="~/css/BattleGuiStyles/ResultsTextStyles.css">
+    <link rel="stylesheet" href="~/css/BattleGuiStyles/HealthBarsStyles.css">
+    <link rel="stylesheet" href="~/css/BattleGuiStyles/EnemyActionIcons.css">
+    <link rel="stylesheet" href="~/css/BattleGuiStyles/SkillBar.css">
+    <link rel="stylesheet" href="~/css/BattleGuiStyles/LogTable.css">
+    <link rel="stylesheet" href="~/css/BattleGuiStyles/PopUps.css">
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css"/>
     <link href="//cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet"/>
 </head>
