--- a/wizards/WizardsWeb/Views/Combat/_EnemyHPBar.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_EnemyHPBar.cshtml
@@ -4,10 +4,10 @@
 <div class="col-8 py-3 px-0">
     <div class="hp-bar hp-bar-enemy">
         <div class="hp-bar-content">
-            <img class="hp-bar-health" src="BattleGui/hp-bar-health.png">
+            <img class="hp-bar-health" src="~/GraphicAssets/BattleGui/hp-bar-health.png">
             <div class="hp-bar-empty-bg"  style="width: @Model.HealthLostPercent();"></div>
             <div class="hp-bar-label">@Model.CurrentEnemyHealth / @Model.MaxEnemyHealth</div>
         </div>
-        <img class="hp-bar-freme" src="BattleGui/hp-bar-freme-enemy.png">
+        <img class="hp-bar-freme" src="~/GraphicAssets/BattleGui/hp-bar-freme-enemy.png">
     </div>
 </div>
