corrections after merge;

--- a/wizards/WizardsWeb/Views/Combat/_EnemyHPBar.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_EnemyHPBar.cshtml
@@ -6,7 +6,7 @@
         <div class="hp-bar-content">
             <img class="hp-bar-health" src="~/GraphicAssets/BattleGui/hp-bar-health.png">
             <div class="hp-bar-empty-bg"  style="width: @Model.HealthLostPercent();"></div>
-            <div class="hp-bar-label">@Model.CurrentEnemyHealth / @Model.MaxEnemyHealth</div>
+            <div class="hp-bar-label">@Model.CurrentHealth / @Model.MaxHealth</div>
         </div>
         <img class="hp-bar-freme" src="~/GraphicAssets/BattleGui/hp-bar-freme-enemy.png">
     </div>
