--- a/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
@@ -10,7 +10,7 @@
         <img class="not-dragable-image" src="~/Images/Bosses/@(Model.EnemySection.Name.Replace(" ", "-")).png" width="100%" height="100%">
     }
     
-    @if (Model.EnemySection.IsEnemyStunned)
+    @if (Model.EnemySection.IsStunned)
     {
         <div class="round-results-info-text stunned-participant-text">STUNNED</div>
     }
@@ -35,15 +35,15 @@
         <div class="round-results-info-text boss-heal-text">@Model.LastRoundResult.EnemyHealthRecovered</div>
     }
     
-    @if (Model.EnemySection.EnemySelectedSkillType == EnemySkillType.Charge)
+    @if (Model.EnemySection.SelectedSkillType == EnemySkillType.Charge)
     {
         <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-charge.png">
     }
-    else if (Model.EnemySection.EnemySelectedSkillType == EnemySkillType.Deadly)
+    else if (Model.EnemySection.SelectedSkillType == EnemySkillType.Deadly)
     {
         <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-deadly.png">
     }
-    else if (Model.EnemySection.EnemySelectedSkillStunning)
+    else if (Model.EnemySection.SelectedSkillStunning)
     {
         <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-stunning.png">
     }
