--- a/wizards/WizardsWeb/Views/Combat/_HeroSection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_HeroSection.cshtml
@@ -7,7 +7,7 @@
         <img class="not-dragable-image" src="@imgAddress" width="100%" height="100%">
     }
     
-    @if (Model.HeroSection.IsHeroStunned)
+    @if (Model.HeroSection.IsStunned)
     {
         <div class="round-results-info-text stunned-participant-text">STUNNED</div>
     }
