--- a/wizards/WizardsWeb/Views/Combat/_HeroSkillBar.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_HeroSkillBar.cshtml
@@ -6,9 +6,9 @@
     <div class="skill-bar">
 
         <label class="skill-slot slot-1">
-            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.First))
+            @if (Model.HeroSection.Skills.ExistsSkill(SkillSlotNumber.First))
             {
-                var firstSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.First);
+                var firstSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.First);
 
                 <input type="radio" value="@firstSkill.Id" asp-for="HeroSelectedSkillId">
                 <img src="~/Images/Hero/Skills/@(firstSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
@@ -17,9 +17,9 @@
         </label>
         
         <label class="skill-slot slot-2">
-            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Second))
+            @if (Model.HeroSection.Skills.ExistsSkill(SkillSlotNumber.Second))
             {
-                var secondSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Second);
+                var secondSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Second);
 
                 <input type="radio" value="@secondSkill.Id" asp-for="HeroSelectedSkillId">
                 <img src="~/Images/Hero/Skills/@(secondSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
@@ -28,9 +28,9 @@
         </label>
         
         <label class="skill-slot slot-3">
-            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Third))
+            @if (Model.HeroSection.Skills.ExistsSkill(SkillSlotNumber.Third))
             {
-                var thirdSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Third);
+                var thirdSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Third);
 
                 <input type="radio" value="@thirdSkill.Id" asp-for="HeroSelectedSkillId">
                 <img src="~/Images/Hero/Skills/@(thirdSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
@@ -39,9 +39,9 @@
         </label>
         
         <label class="skill-slot slot-4">
-            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Fourth))
+            @if (Model.HeroSection.Skills.ExistsSkill(SkillSlotNumber.Fourth))
             {
-                var fourthSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Fourth);
+                var fourthSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Fourth);
 
                 <input type="radio" value="@fourthSkill.Id" asp-for="HeroSelectedSkillId">
                 <img src="~/Images/Hero/Skills/@(fourthSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
@@ -50,9 +50,9 @@
         </label>
         
         <label class="skill-slot slot-5">
-            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Fifth))
+            @if (Model.HeroSection.Skills.ExistsSkill(SkillSlotNumber.Fifth))
             {
-                var fifthSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Fifth);
+                var fifthSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Fifth);
 
                 <input type="radio" value="@fifthSkill.Id" asp-for="HeroSelectedSkillId">
                 <img src="~/Images/Hero/Skills/@(fifthSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
@@ -61,9 +61,9 @@
         </label>
         
         <label class="skill-slot slot-6">
-            @if (Model.HeroSection.HeroSkills.ExistsSkill(SkillSlotNumber.Sixth))
+            @if (Model.HeroSection.Skills.ExistsSkill(SkillSlotNumber.Sixth))
             {
-                var sixthSkill = Model.HeroSection.HeroSkills.GetSkill(SkillSlotNumber.Sixth);
+                var sixthSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Sixth);
 
                 <input type="radio" value="@sixthSkill.Id" asp-for="HeroSelectedSkillId">
                 <img src="~/Images/Hero/Skills/@(sixthSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
