Change addressing of graphic assets;

--- a/wizards/WizardsWeb/Views/Combat/CombatStage.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/CombatStage.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
 
 <body class="bg-arena not-selectable" 
-      style="background-image: url(/GraphicAssets/ArenaBackground/@(Model.Name.Replace(" ", "-")).jpg);">
+      style="background-image: url(/GraphicAssets/ArenaBackground/StageBackground-@(Model.BackgroundImageNumber).jpg);">
     <div class="col-12 p-4">
         <div class="row">
 
