--- a/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
@@ -5,10 +5,7 @@
 <div class="col-12 text-center bg-paper py-2 h4">@Model.EnemySection.Name</div>
 <div class="col-12 participant-container">
     
-    @{
-        var imgAddress = $"BossesCards/{Model.EnemySection.AvatarImageNumber}-Manticora.png";
-        <img class="not-dragable-image" src="~/Images/Bosses/@(Model.EnemySection.Name.Replace(" ", "-")).png" width="100%" height="100%">
-    }
+    <img class="not-dragable-image" src="/Images/Bosses/Enemy-@(Model.EnemySection.AvatarImageNumber).png" width="100%" height="100%">
     
     @if (Model.EnemySection.IsStunned)
     {
