--- a/wizards/WizardsWeb/Views/Combat/_HeroSkillBar.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_HeroSkillBar.cshtml
@@ -11,7 +11,7 @@
                 var firstSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.First);
 
                 <input type="radio" value="@firstSkill.Id" asp-for="HeroSelectedSkillId">
-                <img src="~/Images/Hero/Skills/@(firstSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
+                <img src="~/Images/Hero/Skills/Skill-@(firstSkill.SkillIconNumber).png" width="100%" height="100%">
                 <partial name="_SkillPopUp" model="firstSkill"/>
             }
         </label>
@@ -22,7 +22,7 @@
                 var secondSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Second);
 
                 <input type="radio" value="@secondSkill.Id" asp-for="HeroSelectedSkillId">
-                <img src="~/Images/Hero/Skills/@(secondSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
+                <img src="~/Images/Hero/Skills/Skill-@(secondSkill.SkillIconNumber).png" width="100%" height="100%">
                 <partial name="_SkillPopUp" model="secondSkill"/>
             }
         </label>
@@ -33,7 +33,7 @@
                 var thirdSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Third);
 
                 <input type="radio" value="@thirdSkill.Id" asp-for="HeroSelectedSkillId">
-                <img src="~/Images/Hero/Skills/@(thirdSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
+                <img src="~/Images/Hero/Skills/Skill-@(thirdSkill.SkillIconNumber).png" width="100%" height="100%">
                 <partial name="_SkillPopUp" model="thirdSkill"/>
             }
         </label>
@@ -44,7 +44,7 @@
                 var fourthSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Fourth);
 
                 <input type="radio" value="@fourthSkill.Id" asp-for="HeroSelectedSkillId">
-                <img src="~/Images/Hero/Skills/@(fourthSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
+                <img src="~/Images/Hero/Skills/Skill-@(fourthSkill.SkillIconNumber).png" width="100%" height="100%">
                 <partial name="_SkillPopUp" model="fourthSkill"/>
             }
         </label>
@@ -55,7 +55,7 @@
                 var fifthSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Fifth);
 
                 <input type="radio" value="@fifthSkill.Id" asp-for="HeroSelectedSkillId">
-                <img src="~/Images/Hero/Skills/@(fifthSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
+                <img src="~/Images/Hero/Skills/Skill-@(fifthSkill.SkillIconNumber).png" width="100%" height="100%">
                 <partial name="_SkillPopUp" model="fifthSkill"/>
             }
         </label>
@@ -66,7 +66,7 @@
                 var sixthSkill = Model.HeroSection.Skills.GetSkill(SkillSlotNumber.Sixth);
 
                 <input type="radio" value="@sixthSkill.Id" asp-for="HeroSelectedSkillId">
-                <img src="~/Images/Hero/Skills/@(sixthSkill.Name.Replace(" ", "-")).png" width="100%" height="100%">
+                <img src="~/Images/Hero/Skills/Skill-@(sixthSkill.SkillIconNumber).png" width="100%" height="100%">
                 <partial name="_SkillPopUp" model="sixthSkill"/>
             }
         </label>
