remove bugs from logic after first manual tests of battle with GUI;
Founded and repaired issues:
 - Hero Extension metod had references to its attributes. That causes accumulating attributes during calculations;
 - Some situations in ResultLogServices returned wrong messages;
 - Combat logic had wrong method to set Hero Combat Status;
 - Combat logic did not handle situation when hero is stunned after successfully enemy charge attack;
 - Enemy AI had problems with selecting Enemy skills and choosing patterns
 - Xml Serialization in Behavior Patterns had problem with deserializing - Now there is JsonSerialization instead;
 - Combat service wanted to select Enemy action when enemy was dead. Now there is condition added;
 - Mapping was not registrated with services - Automapper had been not able to find mapping profiles;
 - Combat Profile that maps Logic object for View Models was loosing some properties in mapping;
 - Added link to PVP Arena  button in HeroDetails for quicker starting test match;

--- a/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
@@ -12,12 +12,12 @@
         <div class="round-results-info-text stunned-participant-text">STUNNED</div>
     }
 
-    @if (Model.LastRoundResult.EnemyCombatStatus == EnemyCombatStatus.Countered && !Model.WasResultShown)
+    @if (!Model.WasResultShown && Model.LastRoundResult.EnemyCombatStatus == EnemyCombatStatus.Countered)
     {
         <div class="round-results-info-text boss-countered-text">COUNTERED</div>
     }
 
-    @if (Model.LastRoundResult.EnemyCombatStatus == EnemyCombatStatus.Blocked && !Model.WasResultShown)
+    @if (!Model.WasResultShown && Model.LastRoundResult.EnemyCombatStatus == EnemyCombatStatus.Blocked)
     {
         <div class="round-results-info-text boss-blocked-text">BLOCKED</div>
     }
@@ -27,7 +27,7 @@
         <div class="round-results-info-text on-boss-damage-text">@Model.LastRoundResult.EnemyDamageTaken</div>
     }
     
-    @if (Model.LastRoundResult.EnemyHealthRecovered > 0 && !Model.WasResultShown)
+    @if (!Model.WasResultShown && Model.LastRoundResult.EnemyHealthRecovered > 0)
     {
         <div class="round-results-info-text boss-heal-text">@Model.LastRoundResult.EnemyHealthRecovered</div>
     }
