--- a/wizards/WizardsWeb/Views/Hero/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Details.cshtml
@@ -39,7 +39,7 @@
                     <a type="button" class="gbtn gbtn-action" asp-controller="Inventory" asp-action="Index">Equipment</a>
                     <a type="button" class="gbtn gbtn-action" asp-controller="Merchant" asp-action="Index">Merchant</a><br />
                     <a type="button" class="gbtn gbtn-danger" asp-controller="Player" asp-action="Details">Back to Hero choice</a>
-                    <a type="button" class="gbtn gbtn-action" asp-action="ArenaPvP">PvP Arena</a>
+                    <a type="button" class="gbtn gbtn-action" asp-controller="Combat" asp-action="CreateNewMatch" asp-route-enemyId="1">PvP Arena</a>
                 </li>
             </ul>
         </div>
